# GDGTeamF1

./: README.md
backend/: .gitignore  Dockerfile  Makefile  README.md  compose.ci.yml  compose.dev.yml  compose.test.yml  compose.yml  firebase.json  pyproject.toml  pytest.ini  requirements.txt  tmp.md
backend/app/: README.md  main.py
backend/app/core/: __init__.py  auth.py  config.py  env_boostrap.py  http.py
backend/app/dependencies/: auth.py  db.py  external.py  services.py
backend/app/errors/: auth.py  http.py  transaction.py
backend/app/infrastructure/: __init__.py  currency_api.py  google_ai_api.py
backend/app/models/: auth_models.py  currency_models.py  expense_models.py  google_ai_models.py  transaction_models.py  tx_import_models.py  user_models.py
backend/app/repo/: expense_repo.py  transaction_repo.py  user_repo.py
backend/app/routers/: auth_router.py  currency.py  currency_router.py  expense_router.py  google_ai_router.py  transaction_router.py
backend/app/services/: __init__.py  auth_service.py  currency_service.py  expense_service.py  transaction_service.py  tx_import_service.py  user_service.py
backend/docker/firestore/: Dockerfile  Dockerfile.dev  dev.Dockerfile  test.Dockerfile  test.firebase.json
backend/tests/: conftest.py  test_main.py
backend/tests/app/core/: test_config.py  test_http.py
backend/tests/app/dependencies/: test_db.py  test_services.py
backend/tests/app/main/: test_healthcheck.py
backend/tests/app/repo/: test_expense_repo.py  test_transaction_repo.py
backend/tests/app/routers/: test_currency.py  (+2 more)
(+24 files in other folders)
