[project]
name = "backend"
version = "0.1.0"
description = "Financial Budgeting App"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "authlib>=1.6.6",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "comm==0.2.2",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "executing==2.1.0",
    "fastapi[standard]==0.115.2",
    "google-cloud-firestore>=2.22.0",
    "google-cloud-secret-manager>=2.26.0",
    "httpx>=0.28.1",
    "ipykernel==6.29.5",
    "ipython==8.27.0",
    "itsdangerous>=2.2.0",
    "jedi==0.19.1",
    "jupyter-client==8.6.2",
    "jupyter-core==5.7.2",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "packaging==24.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.2",
    "prompt-toolkit==3.0.47",
    "psutil==6.0.0",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pwdlib[argon2]>=0.3.0",
    "pycountry>=24.6.1",
    "pycparser==2.23",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.12.0",
    "pygments==2.18.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.2",
    "python-dateutil==2.9.0.post0",
    "six==1.16.0",
    "sqlmodel>=0.0.27",
    "stack-data==0.6.3",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "uvicorn==0.30.1",
    "wcwidth==0.2.13",
]
